Refactor BoardController, BuildingController, EventHandlerClient, TimerCountdownController, and TimerView for improved code clarity and responsiveness; remove unused imports and enhance exception handling